# VPipeline

./: .gitignore  README.md  main.py  pyproject.toml
src/tests/: class.py  dict.py  prompt.json  provider.py
src/vcp/: main.py
src/vcp/classopenai/: __init__.py  base.py
src/vcp/classvpipeline/: __init__.py  base.py
src/vcp/graph/: graph.py  user.py
src/vcp/nodes/: __init__.py
src/vcp/nodes/research/: __init__.py  researcher.py
src/vcp/nodes/research/agent/: researcher.py
src/vcp/nodes/script/: writer.py
src/vcp/prompts/: __init__.py  prompt.py  system_prompt.json
src/vcp/schemas/: __init__.py  research.py  script.py
src/vcp/state/: __init__.py  global_state.py
src/vcp/utils/: web_search.py
