[project]
name = "vpipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "lxml>=6.1.1",
    "openai>=2.45.0",
    "playwright>=1.61.0",
    "playwright-stealth>=2.0.3",
    "pydantic-ai>=2.10.0",
    "requests>=2.34.2",
    "trafilatura>=2.1.0",
    "uvicorn>=0.51.0",
]
